--- a/docker_compose.yml
+++ b/docker_compose.yml
@@ -5,5 +5,6 @@ services:
     environment:
       - VERSION=docker
     restart: always
+    privileged: true
     volumes:
       - /PATH/TO/ISOS:/iventoy/iso
